[package]
name = "onise"
version = "1.0.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
hmac = { version = "0.12" }
sha2 = "0.10"
time = "0.3"
thiserror = "2.0.11"
tokio-tungstenite = { version = "0.26.1", features = ["tokio-rustls"] }

# For advanced rate limiting (token bucket):
governor = "0.8"

[dev-dependencies]
wiremock = "0.6.2"
