[package]
name = "onise"
version = "1.0.0"
edition = "2021"
license = "MIT" # MIT License
description = "An async client for Kraken's APIs in Rust."
repository = "https://github.com/myakeen/onise"


[dependencies]
dotenv = "0.15" 
futures-util = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
hmac = { version = "0.12" }
sha2 = "0.10"
time = "0.3"
thiserror = "2.0.11"

# For advanced rate limiting (token bucket):
governor = "0.8"

[dev-dependencies]
wiremock = "0.6.2"
